# g05_prii3

./: COMANDOS_PATTERN_MATCHING  README.md  sprint5_readme
g05_prii3_WS/: CMakeLists.txt  package.xml.bak
g05_prii3_WS/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
g05_prii3_WS/log/: latest_build
g05_prii3_WS/src/Sprint8_eurobot/: Busqueda_agarre_aruco.py  Coordenadas brazo robot  README.md  Readme_robot  SPRINT8_FSM_DEFINITIVO.py  arduino_software  sprint8_launch.py
g05_prii3_WS/src/eurobot_real/: README.md
g05_prii3_WS/src/install/: local_setup.sh
g05_prii3_WS/src/log/: latest_build
g05_prii3_WS/src/sprint4_eurobot/: README_implementacion.md  Readme.Sprint4  package.xml  setup.cfg  setup.py
g05_prii3_WS/src/sprint5_eurobot/: COMANDOS.md  package.xml  setup.py
g05_prii3_WS/src/sprint6_eurobot/: COMANDOS.md  setup.cfg  setup.py
g05_prii3_WS/src/sprint7_eurobot/: README.md  setup.cfg
install/sprint6_eurobot/share/sprint6_eurobot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: frames.gv
src/Sprint8_eurobot/: SPRINT8_FSM_DEFINITIVO.py
src/Sprint8_eurobot/codigos_prueba/: Sprint8_ultimaversion  debug_bifurcacion.py  sprint8_posiblebeta.py
src/eurobot_real/: setup.py
src/eurobot_real/eurobot_real/: real_navigator.py  real_vision_node.py
src/install/: setup.sh
src/log/: latest_build
src/sprint4_eurobot/: Readme.Navigation.md  Readme.Sprint4  setup.py
src/sprint5_eurobot/: COMANDOS.md  package.xml  setup.cfg
src/sprint7_eurobot/: package.xml  setup.py
(+108 files in other folders)
